# infer-test

./: .gitignore  README.md  client.py  main.py  monitor.py  pyproject.toml  server.py
templates/: chat.yaml  demo_thinking.yaml  general_chat.yaml  thinking_logic.yaml
