[project]
name = "infer-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.23.1",
    "requests>=2.32.5",
    "vllm>=0.13.0",
]

[[tool.uv.index]]
url = "https://mirrors.ivolces.com/pypi/simple/"
default = true
